--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NhkSearch</title>
+    <title>NHK番組検索</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="NHKの番組を1週間先まで検索できます">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +12,40 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="container">
+      <%= render 'layouts/header' %>
+
+      <!--開閉メニュー-->
+      <div id="menubar">
+        <nav>
+          <ul>
+            <li><%= link_to "ホーム", root_path %></li>
+          </ul>
+        </nav>
+      </div>
+      <!--/#menubar（開閉メニュー）-->
+
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
+      <%= render 'layouts/footer' %>
+      <!--以下の行はテンプレートの著作。削除しないで下さい。-->
+      <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+    </div>
+    <!--/#container-->
+
+    <!--ページの上部へ戻るボタン-->
+    <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
+
+    <!--開閉ボタン（ハンバーガーアイコン）-->
+    <div id="menubar_hdr">
+      <span></span><span></span><span></span>
+    </div>
+
+    <!--jQueryの読み込み-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!--パララックス（inview）-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
+
   </body>
 </html>
